# MoviesVault

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rebuild.sh
moviesvaulttoolkit/: pyproject.toml
moviesvaulttoolkit/moviesvaulttoolkit/: fetch.py
moviesvaulttoolkit/tests/: test_fetch.py
src/movievault/: fetch.py
