[tool.poetry]
name = "MoviesVault"
version = "0.1.0"
description = ""
authors = ["Adrian Grzemski <adrian.grzemski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.1"]
build-backend = "poetry.core.masonry.api"
