[tool.poetry]
name = "MoviesVault"
version = "0.1.0"
description = ""
authors = ["Adrian Grzemski <adrian.grzemski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.4"

[build-system]
requires = ["poetry-core>=1.1"]
build-backend = "poetry.core.masonry.api"
